Jasmine testing test... drag property set drop property set start position stored on drag about function

--- a/index.html
+++ b/index.html
@@ -6,29 +6,30 @@
 		<title>David | AI-A1.P2</title>
 		<!--link rel="stylesheet" href="css/bootstrap.css"-->
 		<link rel="stylesheet" href="css/styles.css">
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-		<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js"></script>
-		<script src="js/app.js"></script>
 	</head>
 
 	<body>
 		<table id="puzzle">	
 			<tr id="row">
+				<td id = "tile0" style = "background-color:#ccc" class = "draggable"></td>
 				<td id = "tile1" style = "background-color:#444" class = "draggable">1</td>
 				<td id = "tile2" style = "background-color:#555" class = "draggable">2</td>
-				<td id = "tile3" style = "background-color:#666" class = "draggable">3</td>
 			</tr>
 			<tr id="row">
+				<td id = "tile3" style = "background-color:#666" class = "draggable">3</td>
 				<td id = "tile4" style = "background-color:#777" class = "draggable">4</td>
 				<td id = "tile5" style = "background-color:#888" class = "draggable">5</td>
-				<td id = "tile6" style = "background-color:#999" class = "draggable">6</td>
 			</tr>
 			<tr id="row">
+				<td id = "tile6" style = "background-color:#999" class = "draggable">6</td>
 				<td id = "tile7" style = "background-color:#aaa" class = "draggable">7</td>
 				<td id = "tile8" style = "background-color:#bbb" class = "draggable">8</td>
-				<td id = "tile9" style = "background-color:#ccc" class = "draggable"></td>
 			</tr>
 		</table>
+
+		<script src="bower_components/jquery/jquery.min.js"></script>
+		<script src="bower_components/jquery-ui/ui/minified/jquery-ui.min.js"></script>
+		<script src="js/app.js"></script>
 	</body>
 
 </html>
