--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 
 	<head>
@@ -26,10 +27,9 @@
 				<td id = "tile8" style = "background-color:#bbb" class = "draggable">8</td>
 			</tr>
 		</table>
-
 		<script src="bower_components/jquery/jquery.min.js"></script>
 		<script src="bower_components/jquery-ui/ui/minified/jquery-ui.min.js"></script>
-		<script src="js/app.js"></script>
+		<script src="js/Puzzle.js"></script>
 	</body>
 
 </html>
