--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
 		</table>
 		<script src="bower_components/jquery/jquery.min.js"></script>
 		<script src="bower_components/jquery-ui/ui/minified/jquery-ui.min.js"></script>
-		<script src="js/Puzzle.js"></script>
+		<script src="js/EightPuzzle.js"></script>
+		<script src="js/UninformedSearch.js"></script>
+		<script src="js/HeuristicSearch.js"></script>
 	</body>
 
 </html>
