--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 		<script src="js/EightPuzzle.js"></script>
 		<script src="js/UninformedSearch.js"></script>
 		<script src="js/HeuristicSearch.js"></script>
+		<script type="text/javascript">Puzzle.init()</script>
 	</body>
 
 </html>
