--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
 
     <header>
-      <div class="container">
+      <div class="container1">
         <h1>3P71/8-puzzle</h1>
         <h2></h2>
 
@@ -23,7 +23,7 @@
       </div>
     </header>
 
-    <div class="container">
+    <div class="container1">
       <section id="main_content">
         <h3>
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to the 8-puzzle game with ai solver.</h3>
