--- a/index.html
+++ b/index.html
@@ -48,8 +48,12 @@
 		<script src="js/EightPuzzle.js"></script>
 		<script src="js/UninformedSearch.js"></script>
 		<script src="js/HeuristicSearch.js"></script>
+		<script src="js/Tree.js"></script>
 		<script type="text/javascript">
+		    // attach the .compare method to Array's prototype to call it on any array
+
 		Puzzle.init();
+
 		$( '.move-list' ).html( "<h1>Goal</h1><p>"+Puzzle.getGoalState()+"</p>" );
 
 		$('#scramble').click( function() {
@@ -63,8 +67,15 @@
 		});
 		
 		$('#bfs').click( function() {
-			$( '.move-list' ).html( "<h1>Start</h1><p>"+Puzzle.getTilePositions()
-				+"</p><h1>Goal</h1><p>"+Puzzle.getGoalState()+"</p>" );
+			var solution = UninformedSearch.breadthFirst(Puzzle.getTilePositions(), Puzzle.getGoalState())
+				.init()
+				.buildQueue()
+				.search();
+			var moveDisplay = "<h1>Move List</h1>";
+			for(var i = 0; i<solution.length;i++){
+				moveDisplay+="<p>"+solution[i]+"</p>";
+			}
+				$( '.move-list' ).html(moveDisplay);
 		});
 
 		$('#setgoalstate').click( function() {
